# rs2

./: Cargo.toml  ContributionGuidelines.md  LICENSE  MEDIA_STREAMING.md  README.md  performance_optimization_guide.md
benches/: backpressure_comparison.rs  ecosystem_comparison.rs  memory_usage.rs  parallel_performance_comparison.rs  parallel_processing.rs  rs2_comparison.rs  state_operations.rs  stream_operations.rs  vs_futures.rs
benchmark_results/: parallel_processing_output.txt.tmp  stream_operations_output.txt  vs_futures_output.txt
docs/: RS2_TradingSystemComparison.md  connector_docs.md  media_streaming_readme.md  performance_optimization_guide.md  state_management.md
examples/: accumulating_values.rs  advanced_analytics_example.rs  basic_file_streaming.rs  basic_usage.rs  batch_process_example.rs  bracket_case_example.rs  bracket_rs_example.rs  chunk_rs2_example.rs  collect_example.rs  config_usage_example.rs  connector_custom.rs  connector_kafka.rs  custom_backpressure.rs  custom_codec.rs  custom_state_config_example.rs  custom_storage_example.rs  custom_stream_test.rs  interleave_example.rs  kafka_data_pipeline.rs  live_streaming.rs  parallel_mapping.rs  parallel_processing_comprehensive.rs  pipe_basic_usage.rs  pipe_composing.rs  pipe_user_data_processing.rs  processing_elements.rs  processing_stream_of_users.rs  queue_basic_usage.rs  queue_message_processing.rs  queue_producer_consumer.rs  rate_limit_backpressure_example.rs  real_time_analytics_pipeline.rs  resource_management_bracket.rs  resource_management_example.rs  schema_validation_example.rs  sliding_window_example.rs  state_management_example.rs  stateful_deduplicate_example.rs  stateful_filter_example.rs  stateful_group_by_example.rs  (+20 more)
scripts/: run_all_benchmarks.sh
src/: advanced_analytics.rs  error.rs  lib.rs  new_advanced_analytics.rs  pipe.rs  queue.rs  resource_manager.rs  rs2.rs  rs2_new.rs  rs2_new_result_stream_ext.rs  rs2_new_stream_ext.rs  rs2_result_stream_ext.rs  rs2_stream_ext.rs  schema_validation.rs  stream_configuration.rs  stream_performance_metrics.rs  stream_types.rs  work_stealing.rs
src/connectors/: connection_errors.rs  kafka_connector.rs  mod.rs  stream_connector.rs  web_socket_connector.rs
src/media/: chunk_processor.rs  codec.rs  events.rs  mod.rs  priority_queue.rs  streaming.rs  types.rs
src/pipeline/: builder.rs  mod.rs
src/state/: config.rs  mod.rs  storage.rs  stream_ext.rs  traits.rs
src/stream/: advanced.rs  async_combinators.rs  constructors.rs  core.rs  mod.rs  parallel.rs  rate.rs  select.rs  specialized.rs  utility.rs
tests/: advanced_analytics_tests.rs  backpressure_tests.rs  basic_stream_tests.rs  chunk_processor_tests.rs  concurrency_tests.rs  connector_tests.rs  custom_stream_tests.rs  error_handling_tests.rs  extension_trait_tests.rs  kafka_integration_tests_simplified.rs  kafka_test.rs  media_comprehensive_tests.rs  new_advanced_analytics_tests.rs  performance_tests.rs  pipe_tests.rs  queue_tests.rs  resource_management_tests.rs  resource_manager_tests.rs  rs2_new_core_tests.rs  rs2_new_result_stream_ext_tests.rs  rs2_new_stream_ext_tests.rs  rs2_new_tests.rs  schema_validation_tests.rs  state_config_tests.rs  state_integration_tests.rs  state_management.rs  state_management_tests.rs  state_storage_tests.rs  state_stream_ext_advanced.rs  state_stream_ext_basic.rs  state_traits_tests.rs  stream_advanced_tests.rs  stream_async_combinators_tests.rs  stream_constructors_tests.rs  stream_core_tests.rs  stream_parallel_tests.rs  stream_performance_metrics_tests.rs  stream_rate_tests.rs  stream_select_tests.rs  stream_specialized_tests.rs  (+4 more)
tests/stream/: test_advanced.rs  test_constructors.rs  test_core.rs  test_parallel.rs  test_select.rs  test_utility.rs
